benerin document sama nambah coding oracle

--- a/Project_SIA_RPL_T/web/Awal.html
+++ b/Project_SIA_RPL_T/web/Awal.html
@@ -15,7 +15,7 @@
         </div>
         <div id="form">
             <br>
-            <form action="NIS.jsp" id="form-find-nim-insert"> 
+            <form action="Input.jsp" id="form-find-nim-insert"> 
                 <br>
                 Silahkan Masukkan NIS : 
                 <br>
